--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@grpc/proto-loader": "^0.7.9",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "path": "^0.12.7"
   }
 }
