--- a/grpcCrud/package.json
+++ b/grpcCrud/package.json
@@ -4,8 +4,10 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "google-proto-files": "^4.0.0",
     "http-status": "^1.7.0",
     "mongoose": "^7.5.0",
+    "pbts-grpc-transcoder": "^0.2.7",
     "redis": "^4.6.8"
   },
   "scripts": {
